@@ -63,6 +63,48 @@ buttonImage: "../../main/libs/img/datepicker.png",
 buttonImageOnly: 'true',
 <?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
 }).val()
+
+
+ $("#datepicker_from").datepicker({ 
+dateFormat: "yy-mm-dd",
+showButtonPanel: true,
+showOn: "both",
+buttonImage: "../../main/libs/img/datepicker.png",
+buttonImageOnly: 'true',
+<?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
+}).val()
+
+
+ $("#datepicker_to").datepicker({ 
+dateFormat: "yy-mm-dd",
+showButtonPanel: true,
+showOn: "both",
+buttonImage: "../../main/libs/img/datepicker.png",
+buttonImageOnly: 'true',
+<?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
+}).val()
+
+
+ $("#datepicker_from_power").datepicker({ 
+dateFormat: "yy-mm-dd",
+showButtonPanel: true,
+showOn: "both",
+buttonImage: "../../main/libs/img/datepicker.png",
+buttonImageOnly: 'true',
+<?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
+}).val()
+
+
+ $("#datepicker_to_power").datepicker({ 
+dateFormat: "yy-mm-dd",
+showButtonPanel: true,
+showOn: "both",
+buttonImage: "../../main/libs/img/datepicker.png",
+buttonImageOnly: 'true',
+<?php echo "buttonText: '".__('TIMEPICKER_BUTTON_TEXT_LOG')."',"; ?>
+}).val()
+
+
 });
 </script>
 
@@ -1103,26 +1145,11 @@ $(function () {
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE'); ?><img src="main/libs/img/infos.png" alt="" title="<?php echo __('TOOLTIP_RESET_LOG'); ?>" /></td>
-    <td class="log-manage-field"><input type="submit" id="reset_log_submit" name="reset_log_submit" <?php if(!$check_log) { echo 'disabled'; ?> class="inputDisable" value="<?php echo __('MANAGE_EXPORT_EMPTY_LOG_CSV'); ?>" <?php } else { ?> class="delete" value="<?php echo __('MANAGE_RESET_LOG'); ?>" <?php } ?>></td>
+    <td class="log-manage-field"><input type="submit" id="reset_log_submit" name="reset_log_submit" <?php if(!$check_log) { echo 'disabled'; ?> class="inputDisable" value="<?php echo __('MANAGE_EXPORT_EMPTY_LOG_CSV'); ?>" <?php } else { ?>value="<?php echo __('MANAGE_RESET_LOG'); ?>" <?php } ?>></td>
     <td></td>
 </tr>
 </table>
-<input type="hidden" name="reset_log" value="reset_log">
-<input type="hidden" name="quick_load" value="True">
-<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
-<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
-<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
-<?php if(strcmp("$type","month")==0) { ?>
-<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
-<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
-<?php } else { ?>
-<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
-<?php } ?>
 </form>
-<div id="reset_dialog_log" title="<?php echo __('CONFIRMATION'); ?>" style="display:none">
-<p><?php echo __('RESET_CONFIRM'); ?></p>
-</div>
-
 
 
 <form action="display-logs-<?php echo $_SESSION['SHORTLANG']; ?>#anchor-manage" method="post" >
@@ -1155,26 +1182,11 @@ $(function () {
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('MANAGE_RESET_TITLE_POWER'); ?><img src="main/libs/img/infos.png" alt="" title="<?php echo __('TOOLTIP_RESET_LOG'); ?>" /></td>
-    <td class="log-manage-field"><input type="submit" id="reset_log_power_submit" name="reset_log_power_submit" <?php if(!$check_power) { echo 'disabled'; ?> class="inputDisable" value="<?php echo __('MANAGE_EXPORT_EMPTY_POWER_CSV'); ?>" <?php } else { ?> class="delete" value="<?php echo __('MANAGE_RESET_POWER'); ?>" <?php } ?>></td>
+    <td class="log-manage-field"><input type="submit" id="reset_log_power_submit" name="reset_log_power_submit" <?php if(!$check_power) { echo 'disabled'; ?> class="inputDisable" value="<?php echo __('MANAGE_EXPORT_EMPTY_POWER_CSV'); ?>" <?php } else { ?> value="<?php echo __('MANAGE_RESET_POWER'); ?>" <?php } ?>></td>
     <td></td>
 </tr>
 </table>
-<input type="hidden" name="reset_log_power" value="reset_log_power">
-<input type="hidden" name="quick_load" value="True">
-<input type="hidden" name="select_plug" value="<?php echo $select_plug; ?>">
-<input type="hidden" name="select_power" value="<?php echo $select_power; ?>">
-<input type="hidden" name="select_sensor" value="<?php echo $select_sensor; ?>">
-<?php if(strcmp("$type","month")==0) { ?>
-<input type="hidden" name="startmonth" value="<?php echo "$startmonth"; ?>">
-<input type="hidden" name="startyear" value="<?php echo "$startyear"; ?>" >
-<?php } else { ?>
-<input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
-<?php } ?>
 </form>
-<div id="reset_dialog_log_power" title="<?php echo __('CONFIRMATION'); ?>" style="display:none">
-<p><?php echo __('RESET_CONFIRM'); ?></p>
-</div>
-
 
 
 <form action="display-logs-<?php echo $_SESSION['SHORTLANG']; ?>#anchor-manage" method="post" >
@@ -1197,6 +1209,78 @@ $(function () {
 <input type="hidden" name="startday" value="<?php echo "$startday"; ?>">
 <?php } ?>
 </form>
+
+
+<div id="delete_log_form" title="<?php echo __('MANAGE_RESET_TITLE'); ?>" style="display:none">
+        <table class="table_width">
+            <tr>
+                <td class="delete_message_border"><b><?php echo __('DELETE_ALL_LOGS'); ?>:</b></td>
+                <td><input id="check_delete_all" name="check_type_delete" type="radio" value="all" checked/></td>
+            </tr>
+        </table>
+        <br />
+        <table class="table_width">
+            <tr>
+                <td class="delete_message_border"><b><?php echo __('DELETE_SPECIFIC_LOGS'); ?>:</b></td>
+                <td><input id="check_delete_specific" name="check_type_delete" type="radio" value="specific"/></td>
+            </tr>
+        </table>
+        <div id="div_delete_specific" style="display:none">
+        <br />
+        <hr />
+        <br />
+        <table class="table_width">
+            <tr>
+                <td class="field_delete_form"><?php echo __('DELETE_LOGS_FROM'); ?>: <input id="datepicker_from" name="delete_startday" type="text" class="whitefield" size="10" value="<?php echo $startday; ?>"><?php echo __('DELETE_LOGS_TO'); ?>: <input id="datepicker_to" name="delete_endday" type="text" class="whitefield" size="10" value="<?php echo $startday; ?>"></td>
+                <td></td>
+            </tr>
+        </table>
+        </div>
+
+        <br />
+        <br />
+        <p class="p_center">
+            <label class="format_success" id="success_delete_logs" style="display:none"><?php echo __('VALID_DELETE_LOGS'); ?></label>
+            <label class="format_error" id="error_delete_logs" style="display:none"><?php echo __('ERROR_DELETE_LOGS'); ?></label>
+            <label class="format_error" id="error_format_date_logs" style="display:none"><?php echo __('ERROR_FORMAT_DATE'); ?></label>
+        </p>
+</div>
+
+
+<div id="delete_log_form_power" title="<?php echo __('MANAGE_RESET_TITLE_POWER'); ?>" style="display:none">
+        <table class="table_width">
+            <tr>
+                <td class="delete_message_border"><b><?php echo __('DELETE_ALL_LOGS'); ?>:</b></td>
+                <td><input id="check_delete_all_power" name="check_type_delete_power" type="radio" value="all" checked/></td>
+            </tr>
+        </table>
+        <br />
+        <table class="table_width">
+            <tr>
+                <td class="delete_message_border"><b><?php echo __('DELETE_SPECIFIC_LOGS'); ?>:</b></td>
+                <td><input id="check_delete_specific_power" name="check_type_delete_power" type="radio" value="specific"/></td>
+            </tr>
+        </table>
+        <div id="div_delete_specific_power" style="display:none">
+        <br />
+        <hr />
+        <br />
+        <table class="table_width">
+            <tr>
+                <td class="field_delete_form"><?php echo __('DELETE_LOGS_FROM'); ?>: <input id="datepicker_from_power" name="delete_startday" type="text" class="whitefield" size="10" value="<?php echo $startday; ?>"><?php echo __('DELETE_LOGS_TO'); ?>: <input id="datepicker_to_power" name="delete_endday" type="text" class="whitefield" size="10" value="<?php echo $startday; ?>"></td>
+                <td></td>
+            </tr>
+        </table>
+        </div>
+
+        <br />
+        <br />
+        <p class="p_center">
+            <label class="format_success" id="success_delete_logs_power" style="display:none"><?php echo __('VALID_DELETE_LOGS'); ?></label>
+            <label class="format_error" id="error_delete_logs_power" style="display:none"><?php echo __('ERROR_DELETE_LOGS'); ?></label>
+            <label class="format_error" id="error_format_date_logs_power" style="display:none"><?php echo __('ERROR_FORMAT_DATE'); ?></label>
+        </p>
+</div>
 
 
 <br />
