@@ -2,6 +2,7 @@ Cultibox (1.1.28) precise; urgency=low
     + Ajout de la section "Le saviez-vous?" dans la page de welcome
     + Différenciation des messages de chargement des logs en mode auto ou lors de la soumission du formulaire
     + Remise en fonction de la notification de logs plus anciens présent à être chargé
+    + Une fenêtre permet de selectionner une date de début et de fin pour la suppréssion des logs de la base ou encore de supprimer tous les logs existant
 
 -- Yann Genevois <yann.genevois@gmail.com> Tue Jul 16 10:42:56 CEST 2013
 
